# moss

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  build_linux.sh  build_windows_clang.bat  build_windows_clang.ps1  generate_linux.sh  generate_vs2022.bat  generate_vs2022.ps1  generate_vs2026.bat  generate_vs2026.ps1  generate_windows_clang.bat  generate_windows_clang.ps1
cmake/: CompilerWarnings.cmake  ShaderCompilation.cmake
src/: .clang-format
src/editor/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: di_container.h  test.cpp
src/engine_tools/: CMakeLists.txt
src/engine_tools/example_tool/: CMakeLists.txt  main.cpp
src/engine_tools/example_tool/tests/: example_tool_tests.cpp
src/sandbox/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt
